feat: 로또 번호 LottoNumber 클래스 추가
로또 숫자에 대한 유효성 검증 해당 클래스에서 처리하도록 기능 추가